# nhl-draft-simulator

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
resources/art/: banner.txt
resources/art/teams/: ANA.txt  BOS.txt  BUF.txt  CAR.txt  CBJ.txt  CGY.txt  CHI.txt  COL.txt  DAL.txt  DET.txt  EDM.txt  FLA.txt  LAK.txt  MIN.txt  MTL.txt  NJD.txt  NSH.txt  NYI.txt  NYR.txt  OTT.txt  PHI.txt  PIT.txt  SEA.txt  SJS.txt  STL.txt  TBL.txt  TOR.txt  UTA.txt  VAN.txt  VGK.txt  WPG.txt  WSH.txt
src/: app.rs  main.rs
src/data/: art.rs  logos.rs  mod.rs  nhl_api.rs  teams.rs
src/lottery/: simulator.rs
src/screen/: bulk_simulation.rs  carousel.rs  main_menu.rs  mod.rs  simulate_lottery.rs  team_selection.rs
src/screens/: main_menu.rs  mod.rs  screen.rs  team_selection.rs
src/simulator/: simulator.rs
src/ui/: carousel.rs  header.rs  menu.rs  mod.rs  team_selection.rs
src/widget/: footer.rs  header_banner.rs  mod.rs  probability_table.rs  ranked_table.rs  scroll.rs  theme.rs
