[package]
name = "nhl-draft-simulator"
version = "0.1.0"
description = "TUI NHL Draft Lottery Simulator"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
resvg = "0.45"
image = "0.25"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
